--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -1,3 +1,4 @@
-<main>
-  <h1>Living<br>Animation</h1>
-</main>
+<h1>
+  {{moving-word "li"}}ving<br>
+  {{moving-word "an"}}{{moving-word "i"}}{{moving-word "mat"}}ion
+</h1>
