--- a/app/templates/components/moving-word.hbs
+++ b/app/templates/components/moving-word.hbs
@@ -1,5 +1,5 @@
 {{#animated-container class="moving-word" ~}}
-  {{#animated-value text use=transition ~}}
+  {{#animated-value text use=transition duration=duration ~}}
     <span>{{text}}</span>
   {{~/animated-value ~}}
 {{/animated-container ~}}
