--- a/app/templates/components/slideshow-outlet.hbs
+++ b/app/templates/components/slideshow-outlet.hbs
@@ -1,4 +1,4 @@
-{{#animated-value (-get-dynamic-var "outletState") key="outlets.main.render.name" rules=rules as |outletState|}}
+{{#animated-value (-get-dynamic-var "outletState") key="outlets.main.render.name" rules=rules duration=duration as |outletState|}}
   {{#-with-dynamic-vars outletState=outletState}}
     <main>{{outlet}}</main>
   {{/-with-dynamic-vars}}
