get snippets working

--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -1,4 +1,8 @@
+{{! BEGIN-SNIPPET title-slide }}
 <h1>
   living<br>
-  {{moving-word "an"}}{{moving-word "i"}}{{moving-word "mat"}}ion
+  {{moving-word "an" ~}}
+  {{moving-word "i"  ~}}
+  {{moving-word "mat" }}ion
 </h1>
+{{! END-SNIPPET }}
