examples of animation

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -72,3 +72,11 @@ main {
 .hljs {
     background-color: inherit;
 }
+
+.image-quilt {
+    font-size: 0;
+}
+
+.image-quilt > img {
+    height: 250px;
+}
