--- a/app/templates/impart-life.hbs
+++ b/app/templates/impart-life.hbs
@@ -1,5 +1,1 @@
-<div>
-  <h2>{{moving-word "an"}}·{{moving-word "i"}}·{{moving-word "mat"}}e</h2>
-  <div><em>transitive verb</em></div>
-  <div>1. To give life to, fill with life.</div>
-</div>
+{{definition-slide group="without-code"}}
