--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -29,6 +29,7 @@ body {
     font-family: 'Roboto', sans-serif;
     color: var(--primaryColor);
     font-size: 5rem;
+    overflow-x: hidden;
 }
 
 
