--- a/app/templates/components/definition-slide.hbs
+++ b/app/templates/components/definition-slide.hbs
@@ -2,9 +2,9 @@
 {{! BEGIN-SNIPPET definition-slide }}
 <div>
   <h2>
-     {{moving-word "an"  group=group ~}}
-    ·{{moving-word "i"   group=group ~}}
-    ·{{moving-word "mat" group=group ~}}e
+     {{moving-word "an"  ~}}
+    ·{{moving-word "i"   ~}}
+    ·{{moving-word "mat" ~}}e
   </h2>
   <div><em>transitive verb</em></div>
   <div>
