--- a/app/templates/components/title-slide.hbs
+++ b/app/templates/components/title-slide.hbs
@@ -1,8 +1,8 @@
 {{! BEGIN-SNIPPET title-slide }}
 <h1>
   living<br>
-  {{moving-word "an"  group=group ~}}
-  {{moving-word "i"   group=group ~}}
-  {{moving-word "mat" group=group  }}ion
+  {{moving-word "an"  ~}}
+  {{moving-word "i"   ~}}
+  {{moving-word "mat"  }}ion
 </h1>
 {{! END-SNIPPET }}
