--- a/app/templates/impart-life-with-code.hbs
+++ b/app/templates/impart-life-with-code.hbs
@@ -1,5 +1,5 @@
 {{#side-by-side}}
-  {{definition-slide group="with-code"}}
+  {{definition-slide}}
 {{else}}
   {{code-snippet name="definition-slide.hbs"}}
 {{/side-by-side}}
