--- a/app/templates/title-with-code.hbs
+++ b/app/templates/title-with-code.hbs
@@ -1,5 +1,5 @@
 {{#side-by-side}}
-  {{title-slide group="with-code"}}
+  {{title-slide}}
 {{else}}
   {{code-snippet name="title-slide.hbs"}}
 {{/side-by-side}}
