--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -78,6 +78,10 @@ main {
     font-size: 0;
 }
 
+.image-quilt > a {
+    display: inline-block;
+}
+
 .image-quilt > a > img {
     height: 250px;
 }
