--- a/app/templates/affordances/index.hbs
+++ b/app/templates/affordances/index.hbs
@@ -1,7 +1,7 @@
-<div class="image-quilt">
-  {{#each model as |picture|}}
+{{#animated-container class="image-quilt" }}
+  {{#animated-each model use=indexTransition initialInsertion=true duration=500 as |picture|}}
     {{#link-to "affordances.detail" picture.id }}
-      <img src={{picture.url}} >
+      <img src={{picture.url}} width={{picture.width}} height=250 >
     {{/link-to}}
-  {{/each}}
-</div>
+  {{/animated-each}}
+{{/animated-container}}
