adding mascot demo data

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -51,7 +51,7 @@ h2 {
 
 
 main {
-    height: 100vh;
+    min-height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -106,4 +106,7 @@ main {
     display: flex;
     justify-content: center;
     align-items: center;
+}
+.mascots {
+
 }
