--- a/app/templates/mascots.hbs
+++ b/app/templates/mascots.hbs
@@ -1,6 +1,8 @@
 <div class="mascots">
-{{#each model as |mascot|}}
-<div>{{mascot.title}}</div>
-<img src={{mascot.imageURL}} />
-{{/each}}
+  {{#each model as |mascot|}}
+    <div class="mascot-card">
+      <div>{{mascot.title}}</div>
+      <img src={{mascot.imageURL}} />
+    </div>
+  {{/each}}
 </div>
