--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -107,6 +107,19 @@ main {
     justify-content: center;
     align-items: center;
 }
-.mascots {
 
+.mascots .mascot-card {
+    margin: 10px;
+}
+
+.mascot-card {
+    border: 1px solid #ddd;
+    border-radius: 2px;
+    box-shadow: 0 1px 2px rgba(0,0,0,0.15);
+    padding: 30px;
+    width: 500px;
+}
+
+.mascot-card img {
+    max-height: 280px;
 }
