--- a/app/templates/mascots.hbs
+++ b/app/templates/mascots.hbs
@@ -1,8 +1,8 @@
 <div class="mascots">
   {{#each model as |mascot|}}
     <div class="mascot-card">
-      <div>{{mascot.title}}</div>
       <img src={{mascot.imageURL}} />
+      <h3>{{mascot.title}}</h3>
     </div>
   {{/each}}
 </div>
