infrastructure for animating mascots

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -133,6 +133,7 @@ main {
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    background-color: white;
 }
 
 .mascot-card h3 {
