--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -66,14 +66,6 @@ main {
     vertical-align: top;
 }
 
-.eat-time-control {
-    font-size: 1rem;
-    top: 40px;
-    left: 0;
-    right: 0;
-    position: absolute;
-}
-
 .hljs {
     background-color: inherit;
 }
@@ -144,4 +136,39 @@ main {
 
 .mascot-card img {
     height: 100%;
+}
+
+.edge-tray {
+    position: fixed;
+    top: 0;
+    right: 0;
+    font-size: 1rem;
+    width: 50vw;
+    transform: translateX(100%);
+    transition: transform 250ms;
+    opacity: 0.9;
+    z-index: 1;
+}
+
+.edge-tray.is-open {
+    transform: none;
+}
+
+.edge-tray-launcher {
+    cursor: pointer;
+    position: absolute;
+    left: -1.5rem;
+    width: 1.5rem;
+    bottom: 0;
+    text-align: center;
+    border: 1px solid black;
+    border-top-left-radius: 4px;
+    border-bottom-left-radius: 4px;
+    border-right-width: 0;
+    background-color: #ddd;
+}
+
+.edge-tray-panel {
+    background-color: #ddd;
+    border: 1px solid black;
 }
