--- a/src/ui/routes/mascots/template.hbs
+++ b/src/ui/routes/mascots/template.hbs
@@ -1,8 +1,5 @@
 <div class="mascots">
   {{#animated-each mascots use=transition as |mascot|}}
-    <div class="mascot-card" {{action "hide" mascot }}>
-      <img src={{mascot.imageURL}} />
-      <h3>{{mascot.title}}</h3>
-    </div>
+    {{mascot-card model=mascot onclick=(action "hide" mascot) }}
   {{/animated-each}}
 </div>
