keeping slide styling from messing with tutorial styling

--- a/src/ui/components/definition-slide/template.hbs
+++ b/src/ui/components/definition-slide/template.hbs
@@ -1,6 +1,6 @@
 {{#animated-value "definition-slide" use=transition duration=duration }}
 {{! BEGIN-SNIPPET definition-slide }}
-<div>
+<div class="definition-slide">
   <h2>
      {{moving-word "an"  ~}}
     ·{{moving-word "i"   ~}}
