--- a/src/ui/components/title-slide/template.hbs
+++ b/src/ui/components/title-slide/template.hbs
@@ -1,5 +1,5 @@
 {{! BEGIN-SNIPPET title-slide }}
-<h1>
+<h1 class="title-slide">
   living<br>
   {{moving-word "an"  ~}}
   {{moving-word "i"   ~}}
