--- a/src/ui/routes/affordances/detail/template.hbs
+++ b/src/ui/routes/affordances/detail/template.hbs
@@ -1,3 +1,5 @@
-{{#animated-value model duration=500 }}
-  <img src={{model.url}} height=500 >
-{{/animated-value}}
+<main>
+  {{#animated-value model duration=500 }}
+    <img src={{model.url}} height=500 >
+  {{/animated-value}}
+</main>
