--- a/src/ui/routes/tutorial-01/template.hbs
+++ b/src/ui/routes/tutorial-01/template.hbs
@@ -1,4 +1,4 @@
-<div class="tutorial-01">
+<div class="tutorial">
   {{! BEGIN-SNIPPET tutorial-01 }}
   <h2>My Favorite Zoeys and Tomsters</h2>
   <button class="tutorial" {{action "favRandom"}}>
