--- a/src/ui/routes/affordances/index/template.hbs
+++ b/src/ui/routes/affordances/index/template.hbs
@@ -1,6 +1,6 @@
 <div>
   {{#animated-container class="image-quilt" }}
-    {{#animated-each model use=indexTransition initialInsertion=true duration=500 as |picture|}}
+    {{#animated-each model use=indexTransition initialInsertion=true finalRemoval=true duration=500 as |picture|}}
       {{#link-to "affordances.detail" picture.id }}
         <img src={{picture.url}} width={{picture.width}} height=250 >
       {{/link-to}}
