more tutorial steps

--- a/src/ui/routes/tutorial-08/template.hbs
+++ b/src/ui/routes/tutorial-08/template.hbs
@@ -1,6 +1,6 @@
 <div class="tutorial">
-  {{! BEGIN-SNIPPET tutorial-04 }}
-  <h2>My Favorite Zoeys and Tomsters</h2>
+  {{! BEGIN-SNIPPET tutorial-08 }}
+  <h2>Everybody Moving!</h2>
   <button class="tutorial" {{action "favRandom"}}>
     Add Random
   </button>
