--- a/src/ui/routes/tutorial-10/template.hbs
+++ b/src/ui/routes/tutorial-10/template.hbs
@@ -1,6 +1,6 @@
 <div class="tutorial">
-  {{! BEGIN-SNIPPET tutorial-06 }}
-  <h2>With Moving keptSprites and insertedSprites</h2>
+  {{! BEGIN-SNIPPET tutorial-10 }}
+  <h2>With Linear Easing</h2>
   <button class="tutorial" {{action "favRandom"}}>
     Add Random
   </button>
