--- a/src/ui/routes/tutorial-04/template.hbs
+++ b/src/ui/routes/tutorial-04/template.hbs
@@ -1,6 +1,6 @@
 <div class="tutorial">
   {{! BEGIN-SNIPPET tutorial-04 }}
-  <h2>My Favorite Zoeys and Tomsters</h2>
+  <h2>With Moving keptSprites</h2>
   <button class="tutorial" {{action "favRandom"}}>
     Add Random
   </button>
