--- a/src/ui/styles/app.css
+++ b/src/ui/styles/app.css
@@ -121,6 +121,14 @@ main.code {
     height: calc(100vh - var(--header-height));
 }
 
+.side-by-side.more-code > div:first-child {
+    width: 33%;
+}
+
+.side-by-side.more-code > div {
+    width: 67%;
+}
+
 .side-by-side > div > div {
     width: 100vw;
     transform: scale(0.5);
@@ -130,11 +138,23 @@ main.code {
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
+}
+
+.side-by-side.unscaled > div > div {
+    width: initial;
+    transform: initial;
+    height: initial;
 }
 
 .side-by-side .hljs {
     font-size: 5rem;
 }
+
+.side-by-side.unscaled .hljs {
+    font-size: 2.5rem;
+}
+
 
 .mascots {
     display: flex;
@@ -240,4 +260,30 @@ button.tutorial {
 button.tutorial:hover {
     background-color: var(--primaryColor);
     color: var(--highlightColor);
+}
+
+.tutorial ul {
+    margin: 0;
+}
+
+
+.counter .animated-container {
+    font-size: 13rem;
+    float: left;
+}
+
+.counter button {
+    float: left;
+    font-size: 3rem;
+}
+
+.counter span {
+    border: 1px solid var(--highlightColor);
+    padding: 2rem;
+}
+
+.counter > .animated-container {
+    border: 1px solid var(--primaryColor);
+    overflow: hidden;
+    transform: translateZ(0);
 }
