--- a/src/ui/routes/affordances/index/template.hbs
+++ b/src/ui/routes/affordances/index/template.hbs
@@ -2,7 +2,7 @@
   {{#animated-container class="image-quilt" }}
     {{#animated-each model use=indexTransition initialInsertion=true finalRemoval=true duration=500 as |picture|}}
       {{#link-to "affordances.detail" picture.id }}
-        <img src={{picture.url}} width={{picture.width}} height=250 >
+        <img src={{picture.url}} width={{picture.width}} height={{picture.height}} >
       {{/link-to}}
     {{/animated-each}}
   {{/animated-container}}
