farmatch across routes

--- a/src/ui/components/mascot-card/template.hbs
+++ b/src/ui/components/mascot-card/template.hbs
@@ -1,4 +1,4 @@
 <div class="mascot-card {{variant}}" onclick={{action defaultAction }}>
-  <img src={{model.imageURL}} />
+  <img class="mascot-card-image" src={{model.imageURL}} />
   <h3>{{model.title}}</h3>
 </div>
