added interactive drag example

--- a/src/ui/components/mascot-card/template.hbs
+++ b/src/ui/components/mascot-card/template.hbs
@@ -1,4 +1,4 @@
-<div class="mascot-card {{variant}}" onclick={{action defaultAction }}>
+<div class="mascot-card" onclick={{action defaultAction }}>
   <img class="mascot-card-image" src={{model.imageURL}} />
   <h3>{{model.title}}</h3>
 </div>
