--- a/src/ui/routes/tutorial-24/template.hbs
+++ b/src/ui/routes/tutorial-24/template.hbs
@@ -1,7 +1,7 @@
 <div class="tutorial">
   <h2>Flexbox Layout: With Reordering</h2>
   <div class="mascots" >
-    {{#animated-each sortedMascots use=transition duration=200 watch="dragState,sortPriority" as |mascot|}}
+    {{#animated-each sortedMascots use=transition duration=200 watch="dragState" as |mascot|}}
       <div class="mascot-card" onmousedown={{action beginDragging mascot }}>
         <img class="mascot-card-image" draggable="false" src={{mascot.imageURL}} />
         <h3>{{mascot.title}} {{mascot.sortPriority}}</h3>
