--- a/src/ui/components/title-slide/template.hbs
+++ b/src/ui/components/title-slide/template.hbs
@@ -6,3 +6,13 @@
   {{moving-word "mat"  }}ion
 </h1>
 {{! END-SNIPPET }}
+<div class="subhead">
+  Edward Faulkner
+  &lt;edward@eaf4.com&gt;
+</div>
+<div class="subhead">
+  <img style="height: 1.5rem" src="{{rootURL}}images/github.png"> ef4
+</div>
+<div class="subhead">
+  <img style="height: 1.5rem" src="{{rootURL}}images/twitter.png"> eaf4
+</div>
